BaSP-W02: CSS applied to history, products, business, support and other sections

--- a/Semana-02/index.html
+++ b/Semana-02/index.html
@@ -14,23 +14,25 @@
 </head>
 <body>
 	<header>
-		<nav class="nav-bar">
-			<div>
-        <ul class="ul-nav">
-          <li><a href="#">Trackgenix</a></li>
-          <li class="space-nav"><a href="#">About Trackgenix</a></li>
-          <li><a href="#">Functions</a></li>
-          <li><a href="#">Info</a></li>
-          <li><a href="#">History</a></li>
-          <li><a href="#">Products & Services</a></li>
-        </ul>
-      </div>
-		</nav>
+    <div class="header">
+      <nav class="nav-bar">
+        <div>
+          <ul>
+            <li><a href="#">Trackgenix</a></li>
+            <li class="space-nav"><a href="#">About Trackgenix</a></li>
+            <li><a href="#">Functions</a></li>
+            <li><a href="#">Info</a></li>
+            <li><a href="#">History</a></li>
+            <li><a href="#">Products & Services</a></li>
+          </ul>
+        </div>
+      </nav>
+    </div>
 	</header>
-	<aside>
-		<section class="section-aside">
+	<aside class="aside">
+		<section>
 			<input type="search" placeholder="Search">
-			<p class="section-aside-p">Menú</p>
+			<p class="menu-aside">Menú</p>
 			<ul>
 				<li>
           <i class="fa-solid fa-house img-icon"></i>
@@ -50,10 +52,10 @@
 				</li>
 			</ul>
 		</section>
-    <section class="section-aside">
+    <section>
 			<ul>
 				<li>
-					<p class="section-aside-second-p">Get in Touch</p>
+					<p class="p-aside">Get in Touch</p>
 				</li>
 				<li >
 					<p><i class="fa-regular fa-envelope img-icon"></i>info@gigatech.com</p>
@@ -71,33 +73,29 @@
 			</ul>
 	</aside>
 	<main>
-		<div class="section-index">
-			<div class="div-index"> 
+    <div class="primary-section">
+			<div> 
         <h1>Trackgenix</h1>
-        <p class="first-p-index">
+        <p class="text-primary-section">
           Make it easy to record hours worked on each project
           and work team at GigaTech Software Solutions SA.
         </p>
-        <p class="second-p-index">
+        <p class="p-primary-section">
           Lorem Ipsum is simply dummy text of the printing and 
           typesetting industry. Lorem Ipsum has been the industry's
           standard dummy text ever since the 1500s.
         </p>
-        <a href="#" class="a-index">LEARN MORE</a>
+        <a href="#">LEARN MORE</a>
 			</div>
-			<div class="div-img-index">
-				<img src="assets/img-index.png"  width="500px" alt="trackgenix-index" class="img-index">
+			<div>
+				<img src="assets/img-index.png" alt="trackgenix-index">
 			</div>
 		</div> 
     <section class="section-about-functions">
-      <div> 
-          <h2>About Trackgenix</h2>
-      </div>
+      <h2>About Trackgenix</h2>
       <div class="margin-sections">
-        <article class="articles">
-          <div>
-            <img src="assets/idea.png" alt="idea" class="img-sections">
-          </div>
+        <article>
+          <img src="assets/idea.png" alt="idea" class="img-sections">
           <div>
             <h3>Productivity booster</h3>
             <p>
@@ -106,22 +104,18 @@
             </p>
           </div>
         </article>
-        <article class="articles">
-          <div>
-            <img src="assets/profit-report.png" alt="profit-reports" class="img-sections">
-          </div>
+        <article>
+          <img src="assets/profit-report.png" alt="profit-reports" class="img-sections">                   
           <div>
             <h3>Work traceability</h3>
             <p>
               Lorem Ipsum is simply dummy text of the printing and typesetting industry.
               Lorem Ipsum has been the industry's standard dummy text ever since the 1500s.
-            </p>
-          </div>
+            </p>        
+          </div>          
         </article>
-        <article class="articles">
-          <div>
-            <img src="assets/user.png" alt="user" class="img-sections">
-          </div>
+        <article>
+          <img src="assets/user.png" alt="user" class="img-sections">
           <div>
             <h3>Leadership and team management</h3>
             <p>
@@ -130,10 +124,8 @@
             </p>      
           </div>
         </article>
-        <article class="articles">
-          <div>
-            <img src="assets/like.png" alt="like" class="img-sections">
-          </div>
+        <article>
+          <img src="assets/like.png" alt="like" class="img-sections">
           <div>
             <h3>Decision making</h3>
             <p>
@@ -145,14 +137,10 @@
       </div>
 		</section>
 		<section class="section-about-functions">
-			<div> 
-				<h2>Functions</h2>
-			</div>
+			<h2>Functions</h2>
       <div class="margin-sections">
         <article class="articles">
-          <div>
-            <img src="assets/clock.png" alt="clock" class="img-sections">
-          </div>
+          <img src="assets/clock.png" alt="clock" class="img-sections">
           <div>
             <h3>Record of hours</h3>
             <p>
@@ -162,9 +150,7 @@
           </div>
         </article>
         <article class="articles">
-          <div>
-            <img src="assets/profit-report.png" alt="profit-report" class="img-sections">
-          </div>
+          <img src="assets/profit-report.png" alt="profit-report" class="img-sections">
           <div>
             <h3>Reports</h3>
             <p>
@@ -174,9 +160,7 @@
           </div>
         </article>
         <article class="articles">
-          <div>
-            <img src="assets/gear.png" alt="gear" class="img-sections">
-          </div>
+          <img src="assets/gear.png" alt="gear" class="img-sections">
           <div>
             <h3>Resource management</h3>
             <p>
@@ -186,9 +170,7 @@
           </div>
         </article>
         <article class="articles">
-          <div>
-            <img src="assets/roles.png" alt="roles" class="img-sections">
-          </div>
+          <img src="assets/roles.png" alt="roles" class="img-sections">
           <div>
             <h3>Multiple roles</h3>
             <p>
@@ -225,60 +207,67 @@
         <button>Submit</button>
       </form>
 		</div>
-
-
-		<section>
-			<div>
-				<h2>Our history</h2>
-				<h3>GigaTech Software Solutions SA</h3>
-				<p>
-					Lorem Ipsum is simply dummy text of the printing and typesetting industry.
-					Lorem Ipsum has been the industry's standard dummy text ever since the 1500s,
-					when an unknown printer took a galley of type and scrambled it to make a type specimen book.
-				</p>
-			</div>
-			<div>
-				<p>
-					Lorem Ipsum is simply dummy text of the printing and typesetting industry.
-					Lorem Ipsum has been the industry's standard dummy text ever since the 1500s,
-					when an unknown printer took a galley of type and scrambled it to make a type specimen book.
-				</p>
-				<p>
-					Lorem Ipsum is simply dummy text of the printing and typesetting industry.
-					Lorem Ipsum has been the industry's standard dummy text ever since the 1500s,
-					when an unknown printer took a galley of type and scrambled it to make a type specimen book.
-				</p>
-				<p>
-					Lorem Ipsum is simply dummy text of the printing and typesetting industry.
-					Lorem Ipsum has been the industry's standard dummy text ever since the 1500s,
-					when an unknown printer took a galley of type and scrambled it to make a type specimen book.
-				</p>
-			</div>
+		<section id="history">
+      <h2>Our history</h2>
+      <h3>GigaTech Software Solutions SA</h3>
+      <article>
+        <div class="first-div-history">
+          <p>
+            Lorem Ipsum is simply dummy text of the printing and typesetting industry.
+            Lorem Ipsum has been the industry's standard dummy text ever since the 1500s,
+            when an unknown printer took a galley of type and scrambled it to make a type specimen book.
+          </p>
+        </div>
+        <div class="second-div-history">
+          <p>
+            Lorem Ipsum is simply dummy text of the printing and typesetting industry.
+            Lorem Ipsum has been the industry's standard dummy text ever since the 1500s,
+					  when an unknown printer took a galley of type and scrambled it to make a type specimen book.
+				  </p>
+          <p>
+            Lorem Ipsum is simply dummy text of the printing and typesetting industry.
+            Lorem Ipsum has been the industry's standard dummy text ever since the 1500s,
+            when an unknown printer took a galley of type and scrambled it to make a type specimen book.
+          </p>
+          <p>
+            Lorem Ipsum is simply dummy text of the printing and typesetting industry.
+            Lorem Ipsum has been the industry's standard dummy text ever since the 1500s,
+            when an unknown printer took a galley of type and scrambled it to make a type specimen book.
+          </p>
+			  </div>
+      </article>
 		</section>
-		<section>
+
+
+		<section class="products-services">
 			<div>
 				<h2>Products & Services</h2>
 				<p>
 					Lorem Ipsum is simply dummy text of the printing and 
-					typesetting industry. Lorem Ipsum has been the industry's
-					standard dummy text ever since the 1500s, Lorem Ipsum is simply dummy text of the printing and 
-					typesetting industry. Lorem Ipsum has been the industry's
-					standard dummy text ever since the 1500s, Lorem Ipsum is simply dummy text of the printing and 
-					typesetting industry. Lorem Ipsum has been the industry's
-					standard dummy text ever since the 1500s.
+          typesetting industry. Lorem Ipsum has been the industry's
+          standard dummy text ever since the 1500s, Lorem Ipsum is simply dummy text of the printing and 
+          typesetting industry. Lorem Ipsum has been the industry's
+          standard dummy text ever since the 1500s, Lorem Ipsum is simply dummy text of the printing and 
+          typesetting industry. Lorem Ipsum has been the industry's
+          standard dummy text ever since the 1500s, 
 				</p>
 			</div>
 		</section>
-		<section>
-			<article>
-				<h2>Products</h2>
-				<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
-				<p>
-					Lorem Ipsum has been the industry's standard dummy text ever since the 1500s,
-					when an unknown printer took a galley of type and scrambled it to make a type specimen book. 
-				</p>
-			</article>
+
+
+
+		<section class="products-business-support">
 			<div>
+				<h2>Products</h2>
+				<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. 
+          Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, 
+          when an unknown printer took a galley of type and scrambled it to make a type specimen book.
+          Lorem Ipsum is simply dummy text of the printing and typesetting industry. 
+          Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, 
+          when an unknown printer took a galley of type and scrambled it to make a type specimen book.
+        </p>
+			</div>
+			<div class="div-ol">
 				<ol>
 					<li>
 						<img src="assets/share.png" alt="share">
@@ -299,16 +288,18 @@
 				</ol>
 			</div>
 		</section>
-		<section>
+		<section class="products-business-support">
 			<div>
 				<h2>Business</h2>
-				<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
-				<p>
-					Lorem Ipsum has been the industry's standard dummy text ever since the 1500s,
-					when an unknown printer took a galley of type and scrambled it to make a type specimen book. 
-				</p>
+				<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. 
+          Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, 
+          when an unknown printer took a galley of type and scrambled it to make a type specimen book.
+          Lorem Ipsum is simply dummy text of the printing and typesetting industry. 
+          Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, 
+          when an unknown printer took a galley of type and scrambled it to make a type specimen book.
+        </p>
 			</div>
-			<div>
+			<div class="div-ol">
 				<ol>
 					<li>
 						<img src="assets/share.png" alt="share">
@@ -329,16 +320,18 @@
 				</ol>
 			</div>
 		</section>
-		<section>
+		<section class="products-business-support">
 			<div>
 				<h2>Support</h2>
-				<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
-				<p>
-					Lorem Ipsum has been the industry's standard dummy text ever since the 1500s,
-					when an unknown printer took a galley of type and scrambled it to make a type specimen book. 
-				</p>
+				<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. 
+          Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, 
+          when an unknown printer took a galley of type and scrambled it to make a type specimen book.
+          Lorem Ipsum is simply dummy text of the printing and typesetting industry. 
+          Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, 
+          when an unknown printer took a galley of type and scrambled it to make a type specimen book.
+        </p>
 			</div>
-			<div>
+			<div class="div-ol">
 				<ol>
 					<li>
 						<img src="assets/share.png" alt="share">
@@ -359,7 +352,6 @@
 				</ol>
 			</div>
 		</section>
-    -->
 	</main> 
   <!--
 	<footer>
