--- a/Semana-02/index.html
+++ b/Semana-02/index.html
@@ -14,20 +14,17 @@
 </head>
 <body>
 	<header>
-    <div class="header">
-      <nav class="nav-bar">
-        <div>
-          <ul>
-            <li><a href="#">Trackgenix</a></li>
-            <li class="space-nav"><a href="#">About Trackgenix</a></li>
-            <li><a href="#">Functions</a></li>
-            <li><a href="#">Info</a></li>
-            <li><a href="#">History</a></li>
-            <li><a href="#">Products & Services</a></li>
-          </ul>
-        </div>
-      </nav>
-    </div>
+    <nav class="nav-bar">
+        <i class="fa-solid fa-bars"></i>
+        <a href="#">Trackgenix</a>
+        <ul>
+          <li><a href="#">About Trackgenix</a></li>
+          <li><a href="#">Functions</a></li>
+          <li><a href="#">Info</a></li>
+          <li><a href="#">History</a></li>
+          <li><a href="#">Products & Services</a></li>
+        </ul>
+    </nav>
 	</header>
 	<aside class="aside">
 		<section>
@@ -192,13 +189,20 @@
           <label>Email</label>
           <input type="email" placeholder="text your email">
         </div>
-        <div>
-          <label>Contact area</label>
-          <select name="area">
-            <option value="human-resources">Human Resources</option>
-            <option value="systems">Systems</option>
-            <option value="commercialization">Commercialization</option>
-          </select>
+        <div class="contact-area">
+          <p>Contact area</p>
+          <label>
+            <input type="radio" name="contact-area" value="Human resources" class="input-radio" checked/>
+            <p>Human resources</p>
+          </label>
+          <label>
+            <input type="radio" name="contact-area" value="Systems" class="input-radio"/>
+            <p>Systems</p>
+          </label>
+          <label>
+            <input type="radio" name="contact-area" value="Commercialization" class="input-radio"/>
+            <p>Commercialization</p>
+          </label>
         </div>
         <div>
           <label>Message</label>
@@ -237,8 +241,6 @@
 			  </div>
       </article>
 		</section>
-
-
 		<section class="products-services">
 			<div>
 				<h2>Products & Services</h2>
@@ -253,9 +255,6 @@
 				</p>
 			</div>
 		</section>
-
-
-
 		<section class="products-business-support">
 			<div>
 				<h2>Products</h2>
@@ -353,29 +352,27 @@
 			</div>
 		</section>
 	</main> 
-  <!--
 	<footer>
 		<div>
 			<ul>
 				<li>
-					<a href="https://www.linkedin.com/" target="_blank"><img src="assets/linkedin.png" alt="linkedIn"></a>
+					<a href="https://www.linkedin.com/" target="_blank"><i class="fa-brands fa-linkedin"></i></a>
 				</li>
 				<li>
-					<a href="https://twitter.com/" target="_blank"> <img src="assets/gorjeo.png" alt="twitter"></a>
+					<a href="https://twitter.com/" target="_blank"><i class="fa-brands fa-twitter"></i></a>
 				</li>
 				<li>
-					<a href="https://facebook.com/" target="_blank"><img src="assets/facebook.png" alt="facebook"></a>
+					<a href="https://facebook.com/" target="_blank"><i class="fa-brands fa-facebook"></i></a>
 				</li>
 				<li>
-					<a href="https://instagram.com/" target="_blank"><img src="assets/instagram.png" alt="instagram"></a>
+					<a href="https://instagram.com/" target="_blank"><i class="fa-brands fa-instagram"></i></a>
 				</li>
 				<li>
-					<a href="https://github.com/" target="_blank"><img src="assets/github.png" alt="github"></a>
+					<a href="https://github.com/" target="_blank"><i class="fa-brands fa-github"></i></a>
 				</li>
 			</ul>
 			<p>Copyright © 2022 Radium Rocket. All rights reserved.</p>
 		</div>
 	</footer>
-  -->
 </body>
 </html>
