BaSP-W02: code was cleaned up

--- a/Semana-02/index.html
+++ b/Semana-02/index.html
@@ -27,9 +27,9 @@
     </nav>
 	</header>
 	<aside class="aside">
-		<section>
+		<section class="aside-links">
 			<input type="search" placeholder="Search">
-			<p class="menu-aside">Menú</p>
+			<p>Menú</p>
 			<ul>
 				<li>
           <i class="fa-solid fa-house img-icon"></i>
@@ -49,7 +49,7 @@
 				</li>
 			</ul>
 		</section>
-    <section>
+    <section class="aside-contact">
 			<ul>
 				<li>
 					<p class="p-aside">Get in Touch</p>
@@ -70,14 +70,14 @@
 			</ul>
 	</aside>
 	<main>
-    <div class="primary-section">
+    <div class="primary-section container-size">
 			<div> 
         <h1>Trackgenix</h1>
-        <p class="text-primary-section">
+        <p>
           Make it easy to record hours worked on each project
           and work team at GigaTech Software Solutions SA.
         </p>
-        <p class="p-primary-section">
+        <p>
           Lorem Ipsum is simply dummy text of the printing and 
           typesetting industry. Lorem Ipsum has been the industry's
           standard dummy text ever since the 1500s.
@@ -88,9 +88,9 @@
 				<img src="assets/img-index.png" alt="trackgenix-index">
 			</div>
 		</div> 
-    <section class="section-about-functions">
+    <section class="about container-size">
       <h2>About Trackgenix</h2>
-      <div class="margin-sections">
+      <div>
         <article>
           <img src="assets/idea.png" alt="idea" class="img-sections">
           <div>
@@ -133,10 +133,10 @@
         </article> 
       </div>
 		</section>
-		<section class="section-about-functions">
+		<section class="functions container-size">
 			<h2>Functions</h2>
-      <div class="margin-sections">
-        <article class="articles">
+      <div>
+        <article>
           <img src="assets/clock.png" alt="clock" class="img-sections">
           <div>
             <h3>Record of hours</h3>
@@ -146,7 +146,7 @@
             </p>
           </div>
         </article>
-        <article class="articles">
+        <article>
           <img src="assets/profit-report.png" alt="profit-report" class="img-sections">
           <div>
             <h3>Reports</h3>
@@ -156,7 +156,7 @@
             </p>      
           </div>
         </article>
-        <article class="articles">
+        <article>
           <img src="assets/gear.png" alt="gear" class="img-sections">
           <div>
             <h3>Resource management</h3>
@@ -166,7 +166,7 @@
             </p>    
           </div>
         </article>
-        <article class="articles">
+        <article>
           <img src="assets/roles.png" alt="roles" class="img-sections">
           <div>
             <h3>Multiple roles</h3>
@@ -178,9 +178,9 @@
         </article>
       </div>
 		</section>
-		<div class="information">
+		<div class="information container-size">
 			<h2>Information</h2>
-      <form class="form">
+      <form>
         <div>
           <label>Name</label>
           <input type="text" placeholder="text your name">
@@ -192,15 +192,15 @@
         <div class="contact-area">
           <p>Contact area</p>
           <label>
-            <input type="radio" name="contact-area" value="Human resources" class="input-radio" checked/>
+            <input type="radio" name="contact-area" value="Human resources" checked/>
             <p>Human resources</p>
           </label>
           <label>
-            <input type="radio" name="contact-area" value="Systems" class="input-radio"/>
+            <input type="radio" name="contact-area" value="Systems"/>
             <p>Systems</p>
           </label>
           <label>
-            <input type="radio" name="contact-area" value="Commercialization" class="input-radio"/>
+            <input type="radio" name="contact-area" value="Commercialization" />
             <p>Commercialization</p>
           </label>
         </div>
@@ -211,18 +211,18 @@
         <button>Submit</button>
       </form>
 		</div>
-		<section id="history">
+		<section class="history container-size">
       <h2>Our history</h2>
       <h3>GigaTech Software Solutions SA</h3>
       <article>
-        <div class="first-div-history">
+        <div>
           <p>
             Lorem Ipsum is simply dummy text of the printing and typesetting industry.
             Lorem Ipsum has been the industry's standard dummy text ever since the 1500s,
             when an unknown printer took a galley of type and scrambled it to make a type specimen book.
           </p>
         </div>
-        <div class="second-div-history">
+        <div>
           <p>
             Lorem Ipsum is simply dummy text of the printing and typesetting industry.
             Lorem Ipsum has been the industry's standard dummy text ever since the 1500s,
@@ -241,7 +241,7 @@
 			  </div>
       </article>
 		</section>
-		<section class="products-services">
+		<section class="products-services container-size">
 			<div>
 				<h2>Products & Services</h2>
 				<p>
@@ -255,7 +255,7 @@
 				</p>
 			</div>
 		</section>
-		<section class="products-business-support">
+		<section class="products container-size">
 			<div>
 				<h2>Products</h2>
 				<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. 
@@ -266,7 +266,7 @@
           when an unknown printer took a galley of type and scrambled it to make a type specimen book.
         </p>
 			</div>
-			<div class="div-ol">
+			<div>
 				<ol>
 					<li>
 						<img src="assets/share.png" alt="share">
@@ -287,7 +287,7 @@
 				</ol>
 			</div>
 		</section>
-		<section class="products-business-support">
+		<section class="business container-size">
 			<div>
 				<h2>Business</h2>
 				<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. 
@@ -319,7 +319,7 @@
 				</ol>
 			</div>
 		</section>
-		<section class="products-business-support">
+		<section class="support container-size">
 			<div>
 				<h2>Support</h2>
 				<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. 
