BaSP-W02: icons added to products, business and support

--- a/Semana-02/index.html
+++ b/Semana-02/index.html
@@ -68,6 +68,7 @@
           </p>
 				</li>
 			</ul>
+    </section>
 	</aside>
 	<main>
     <div class="primary-section container-size">
@@ -269,20 +270,16 @@
 			<div>
 				<ol>
 					<li>
-						<img src="assets/share.png" alt="share">
-						<a href="#">Functionalities</a>
+						<a href="#"><i class="fa-solid fa-share"></i>Functionalities</a>
 					</li>
 					<li>
-						<img src="assets/share.png" alt="share">
-						<a href="#">Downloads</a>
+						<a href="#"><i class="fa-solid fa-share"></i>Downloads</a>
 					</li>
 					<li>
-						<img src="assets/share.png" alt="share">
-						<a href="#">Integrations</a>
+						<a href="#"><i class="fa-solid fa-share"></i>Integrations</a>
 					</li>
 					<li>
-						<img src="assets/share.png" alt="share">
-						<a href="#">Additional features</a>
+						<a href="#"><i class="fa-solid fa-share"></i>Additional features</a>
 					</li>
 				</ol>
 			</div>
@@ -301,20 +298,16 @@
 			<div class="div-ol">
 				<ol>
 					<li>
-						<img src="assets/share.png" alt="share">
-						<a href="#">About us</a>
+						<a href="#"><i class="fa-solid fa-share"></i>About us</a>
 					</li>
 					<li>
-						<img src="assets/share.png" alt="share">
-						<a href="#">Customers</a>
+						<a href="#"><i class="fa-solid fa-share"></i>Customers</a>
 					</li>
 					<li>
-						<img src="assets/share.png" alt="share">
-						<a href="#">Means</a>
+						<a href="#"><i class="fa-solid fa-share"></i>Means</a>
 					</li>
 					<li>
-						<img src="assets/share.png" alt="share">
-						<a href="#">Blog</a>
+						<a href="#"><i class="fa-solid fa-share"></i>Blog</a>
 					</li>
 				</ol>
 			</div>
@@ -333,20 +326,16 @@
 			<div class="div-ol">
 				<ol>
 					<li>
-						<img src="assets/share.png" alt="share">
-						<a href="#">Aid</a>
+						<a href="#"><i class="fa-solid fa-share"></i>Aid</a>
 					</li>
 					<li>
-						<img src="assets/share.png" alt="share">
-						<a href="#">Tutorials</a>
+						<a href="#"><i class="fa-solid fa-share"></i>Tutorials</a>
 					</li>
 					<li>
-						<img src="assets/share.png" alt="share">
-						<a href="#">API</a>
+						<a href="#"><i class="fa-solid fa-share"></i>API</a>
 					</li>
 					<li>
-						<img src="assets/share.png" alt="share">
-						<a href="#">Contacts</a>
+						<a href="#"><i class="fa-solid fa-share"></i>Contacts</a>
 					</li>
 				</ol>
 			</div>
